Avoid page breaks inside dance instructions

--- a/frontend/src/pages/events/print/DanceInstructions.sass
+++ b/frontend/src/pages/events/print/DanceInstructions.sass
@@ -35,6 +35,8 @@
         padding: 0.5em 0 3em
 
   .dance-instructions-dance
+    break-inside: avoid-page
+
     button
       opacity: 0
       display: inline
